--- a/app/views/slurrystorage/current/existing-size-storage-fail.html
+++ b/app/views/slurrystorage/current/existing-size-storage-fail.html
@@ -25,8 +25,11 @@
       <h1 class="govuk-heading-l">
         You cannot apply for a grant from this scheme
       </h1>
-
+  {% if (data['farmertype'] == "Pig") %}
+      <p class="govuk-body">This grant is to get your serviceable storage levels to 8 months.</p>
+      {% else %}
       <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.</p>
+  {% endif %}
 
 <br>
       <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
