--- a/app/views/slurrystorage/current/planned-size-storage.html
+++ b/app/views/slurrystorage/current/planned-size-storage.html
@@ -22,8 +22,42 @@ Planned size storage
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
+        {% if (data['farmertype'] == "Pig") %}
+        {{ govukRadios({
+            idPrefix: 'planned-size-storage-pig',
+            name: 'planned-size-storage-pig',
+            fieldset: {
+                legend: {
+                    text: 'How many months’ slurry storage capacity will you have after the project?',
+                    isPageHeading: yes,
+                    classes: 'govuk-fieldset__legend--l'
+                }
+            },
 
+            hint: {
+              text: "Based on your current animal numbers"
+            },
 
+            items: [
+          {
+            value: "8 months",
+            text: "8 months",
+            checked: checked("planned-size-storage-pig", "8 months")
+          },
+
+          {
+            value: "More than 8 months",
+            text: "More than 8 months",
+            checked: checked("planned-size-storage-pig", "More than 8 months")
+          },
+          {
+            value: "Less than 8 months",
+            text: "Less than 8 months",
+            checked: checked("planned-size-storage-pig", "Less than 8 months")
+          }
+        ]
+        }) }}
+        {% else %}
               {{ govukRadios({
                   idPrefix: 'planned-size-storage',
                   name: 'planned-size-storage',
@@ -49,9 +83,6 @@ Planned size storage
                 {
                   value: "More than 6 months",
                   text: "More than 6 months",
-                  conditional: {
-                  html:numberMonths4
-                },
                   checked: checked("planned-size-storage", "More than 6 months")
                 },
                 {
@@ -61,6 +92,7 @@ Planned size storage
                 }
               ]
               }) }}
+            {% endif %}
 
           <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
@@ -73,11 +105,17 @@ Planned size storage
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
+      {% if (data['farmertype'] == "Pig") %}
+          <p class="govuk-body">This grant is to get your serviceable storage levels to 8 months.<br><br>
+            For example, if you have 4 months’ serviceable storage, we will fund another 4 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 6 months.<br><br>
+            Any capacity above 8 months is not covered by the grant.<br><br>
+            You must maintain at least 8 months’ capacity for the duration of the 5-year grant funding agreement.</p>
+      {% else %}
           <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
             For example, if you have 4 months’ serviceable storage, we will fund another 2 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 4 months.<br><br>
             Any capacity above 6 months is not covered by the grant.<br><br>
             You must maintain at least 6 months’ capacity for the duration of the 5-year grant funding agreement.</p>
-
+        {% endif %}
 
       </div>
    </div>
