--- a/app/views/slurrystorage/current/project-type.html
+++ b/app/views/slurrystorage/current/project-type.html
@@ -62,7 +62,7 @@ Project type
               ]
               }) }}
 
-          <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+          <p> <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
 
       </form>
@@ -74,10 +74,11 @@ Project type
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
           <p class="govuk-body">This grant is for:</p>
-          <ul class="govuk-body">
+          <ul class="govuk-list govuk-list--bullet">
             <li>replacing an existing store that is no longer fit for purpose with a new store </li>
             <li>adding a new store to increase existing capacity</li>
             <li>expanding an existing store (for example, by adding an extra ring to a steel tank)</li>
+            <li>adding an impermeable cover to existing stores to increase storage capacity</li>
           </ul>
           <details class="govuk-details" data-module="govuk-details">
             <summary class="govuk-details__summary">
