--- a/app/views/slurrystorage/current/estimate.html
+++ b/app/views/slurrystorage/current/estimate.html
@@ -13,7 +13,7 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
-  <a class="govuk-back-link" href="covers">Back</a>
+  <a class="govuk-back-link" href="cover-existing-stores">Back</a>
 {% endblock %}
 
 {% block content %}
