--- a/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  You may be able to apply for a grant from this scheme
+  You cannot apply for a grant from this scheme
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,29 +13,24 @@
     },
       html: 'This is not a full service. It is not production code and you might experience problems  .'
   }) }}
-  <a class="govuk-back-link govuk-!-margin-top-6" href="tenancy-length">Back</a>
+
+  <a class="govuk-back-link" href="existing-fit-for-purpose">Back</a>
 {% endblock %}
 
 {% block content %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="system-type" method="post">
+
       <h1 class="govuk-heading-l">
-        You may be able to apply for a grant from this scheme
+        You cannot apply for a grant from this scheme
       </h1>
 
-      <p class="govuk-body">You will need to extend your tenancy agreement for 5 years after the final grant payment.</p>
+      <p class="govuk-body">Your existing store must be signed off as fit for purpose by a structural engineer by full application.</p>
 
-        <p><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
+      <p><a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments" class="govuk-link govuk-link--no-visited-state"> See other grants you may be eligible for.</a></p>
+      </div>
 
-
-
-
-
-      </form>
-
-    </div>
   </div>
 
 {% endblock %}
