--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -22,8 +22,42 @@ Existing size storage
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
+        {% if (data['farmertype'] == "Pig") %}
+        {{ govukRadios({
+            idPrefix: 'existing-size-storage-pig',
+            name: 'existing-size-storage-pig',
+            fieldset: {
+                legend: {
+                    text: 'How many months’ slurry storage capacity do you have?',
+                    isPageHeading: yes,
+                    classes: 'govuk-fieldset__legend--l'
+                }
+            },
 
+            hint: {
+              text: "Based on your current animal numbers"
+            },
 
+            items: [
+          {
+            value: "8 months",
+            text: "Less than 8 months",
+            checked: checked("existing-size-storage-pig", "8 months")
+          },
+
+          {
+            value: "8 months+ not fit",
+            text: "8 months or more, but it is no longer fit for purpose",
+            checked: checked("existing-size-storage-pig", "8 months+ not fit")
+          },
+          {
+            value: "8 months+ fit",
+            text: "8 months or more, and it is fit for purpose",
+            checked: checked("existing-size-storage-pig", "8 months+ fit")
+          }
+        ]
+        }) }}
+          {% else %}
               {{ govukRadios({
                   idPrefix: 'existing-size-storage',
                   name: 'existing-size-storage',
@@ -41,31 +75,24 @@ Existing size storage
 
                   items: [
                 {
-                  value: "Less than 6 months",
+                  value: "6 months",
                   text: "Less than 6 months",
-                  conditional: {
-                  html:numberMonths
-
-                },
-                checked: checked("existing-size-storage", "Less than 6 months")
+                  checked: checked("existing-size-storage", "6 months")
                 },
 
                 {
-                  value: "Up to 6 months but it is no longer serviceable",
+                  value: "6 months+ not fit",
                   text: "6 months or more, but it is no longer fit for purpose",
-                  conditional: {
-                  html:numberMonths2
-                },
-                  checked: checked("existing-size-storage", "Up to 6 months but it is no longer serviceable")
+                  checked: checked("existing-size-storage", "6 months+ not fit")
                 },
                 {
-                  value: "At least 6 months",
+                  value: "6 months+ fit",
                   text: "6 months or more, and it is fit for purpose",
-                  checked: checked("existing-size-storage", "At least 6 months")
+                  checked: checked("existing-size-storage", "6 months+ fit")
                 }
               ]
               }) }}
-
+              {% endif %}
           <p>  <br/><button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
 
 
@@ -77,9 +104,17 @@ Existing size storage
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
+          {% if (data['farmertype'] == "Pig") %}
+          <p class="govuk-body">This grant is to get your serviceable storage levels to 8 months.<br><br>
+            For example, if you have 4 months’ serviceable storage, we will fund another 4 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 6 months.<br><br>
+            You cannot apply for the grant if you already have 8 months' storage that is fit for purpose.<br>
+            {%else %}
+
           <p class="govuk-body">This grant is to get your serviceable storage levels to 6 months.<br><br>
             For example, if you have 4 months’ serviceable storage, we will fund another 2 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 4 months.<br><br>
             You cannot apply for the grant if you already have 6 months' storage that is fit for purpose.<br>
+
+            {% endif %}
             <details class="govuk-details" data-module="govuk-details">
               <summary class="govuk-details__summary">
                 <span class="govuk-details__summary-text">
