--- a/app/views/slurrystorage/current/intensive-farming-permit.html
+++ b/app/views/slurrystorage/current/intensive-farming-permit.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-What is your business?
+Intensive farming permit
 {% endblock %}
 
 {% block beforeContent %}
@@ -23,45 +23,41 @@ What is your business?
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
               {{ govukRadios({
-                  idPrefix: 'farmertype',
-                  name: 'farmertype',
+                  idPrefix: 'intensivepermit',
+                  name: 'intensivepermit',
                   fieldset: {
                       legend: {
-                          text: 'What do you farm mainly?',
+                          text: 'Do you have an intensive farming permit?',
                           isPageHeading: yes,
                           classes: 'govuk-fieldset__legend--l'
                       }
                   },
                   hint: {
-                    text: "Select one option"
+                    html: "
+                    "
                   },
 
                   items: [
                 {
-                  value: "Pig",
-                  text: "Pig",
-                  checked: checked("farmertype", "Pig")
+                  value: "Yes",
+                  text: "Yes",
+                  checked: checked("intensivepermit", "Yes")
                 },
 
                 {
-                  value: "Beef",
-                  text: "Beef",
-                  checked: checked("farmertype", "Beef")
+                  value: "No, but I need one",
+                  text: "No, but I need one",
+                  checked: checked("intensivepermit", "No, but I need one")
                 },
-                {
-                  value: "Dairy",
-                  text: "Dairy",
-                  checked: checked("farmertype", "Dairy")
-                },
+
 
                 {
                   divider: "or"
                 },
                 {
-                  value: "None of the above",
-                  text: "None of the above",
-                  behaviour: "exclusive",
-                  checked: checked("farmertype", "None of the above")
+                  value: "No",
+                  text: "No, my farm does not need an intensive farming permit",
+                  checked: checked("intensivepermit", "No")
 
                 }
               ]
@@ -78,10 +74,14 @@ What is your business?
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">This grant is for pig, beef or dairy farmers.<br><br>
-          If you mainly farm pigs, this grant is to get your slurry storage levels to 8 months.<br><br>
-          For mainly beef and dairy farmers, the grant is to get your storage levels to 6 months.
-          </p>
+          <p class="govuk-body">You must have a permit from the Environment Agency (EA) to rear pigs intensively in an installation if you have more than:</p>
+          <ul class="govuk-list govuk-list--bullet">
+          <li>2,000 places for production pigs (over 30kg)</li>
+          <li>750 places for sows</li>
+          </ul>
+
+          <p class="govuk-body">You may need to apply to change your permit if you increase your slurry storage.</p>
+
      </div>
    </div>
 
