--- a/app/views/slurrystorage/current/project-responsibility.html
+++ b/app/views/slurrystorage/current/project-responsibility.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Is the planned project on land with a tenancy agreement in place until 2026 or after?
+  Project responsibility
 {% endblock %}
 
 {% block beforeContent %}
@@ -20,28 +20,28 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form id="mainForm" class="form" action="tenancy-length-answer" method="post">
+      <form id="mainForm" class="form" action="system-type" method="post">
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Do you have a tenancy agreement for 5 years after the final grant payment?
-              </h1>
+                Will you take full responsibility for the 5-year project agreement?              </h1>
             </legend>
             <div id="tenancy-length-hint" class="govuk-hint">
-      The location of the slurry store
-    </div>
-            <div class="govuk-radios govuk-radios--inline">
+              To receive grant funding, you will need to fulfil a 5-year agreement.<br><br>
+
+              If you are unable to fulfil the agreement, you can agree with your landlord to underwrite it and take responsibility. For example, you could choose this option if you are on a short tenancy agreement.    </div>
+            <div class="govuk-radios govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes") }}>
+                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="Yes" {{ checked("tenancy-length", "Yes, I intend to take full responsibility for the project") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length">
-                  Yes
+                  Yes, I intend to take full responsibility for the project
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="No" {{ checked("tenancy-length", "No") }}>
+                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="No" {{ checked("tenancy-length", "No, I have confirmed with my landlord that they will underwrite my agreement") }}>
                 <label class="govuk-label govuk-radios__label" for="tenancy-length-2">
-                  No
+                  No, I have confirmed with my landlord that they will underwrite my agreement
                 </label>
               </div>
             </div>
@@ -55,15 +55,7 @@
     </div>
     <div class="govuk-grid-column-one-third">
 
-      <div class="app-step-nav-related app-step-nav-related--singular">
-        <h2 class="app-step-nav-related__heading">
-          <span class="app-step-nav-related__pretitle">Eligibility</span>
-          </h2>
-          <p>You must own the land or have a tenancy in place for 5 years after the final grant payment.</p>
-          <a href="#">
-          </a>
 
-      </div>
 
       </div>
     </div>
