--- a/app/views/slurrystorage/current/project-type-fail.html
+++ b/app/views/slurrystorage/current/project-type-fail.html
@@ -27,13 +27,14 @@
       </h1>
 
       <p class="govuk-body">This grant is for:</p>
-      <ul class="govuk-body">
+      <ul class="govuk-list govuk-list--bullet">
         <li>replacing an existing store that is no longer fit for purpose with a new store </li>
         <li>adding a new store to increase existing capacity</li>
         <li>expanding an existing store (for example, by adding an extra ring to a steel tank)</li>
+        <li>adding an impermeable cover to existing stores to increase storage capacity</li>
       </ul>
 
-      
+
 
 
 
