--- a/app/views/slurrystorage/index.html
+++ b/app/views/slurrystorage/index.html
@@ -20,7 +20,7 @@
         <h2 class="govuk-heading-l">User research</h2>
 
         <p class='govuk-list app-list--definition'>
-        <a href='#' class="govuk-link--no-visited-state" target="new">Start page</a><br>
+        <a href='slurrystorage/current/start' class="govuk-link--no-visited-state" target="new">Start page</a><br>
           Start your user research here</p>
 
 </div>
@@ -28,9 +28,9 @@
       <div class="proto-admin">
         <h2 class="govuk-heading-l">Design history</h2>
         <p class='govuk-list app-list--definition'>
-          <a href='#'' class="govuk-link--no-visited-state"><strong>Round 2: version 1 (current)</a></strong><br>
+          <a href='slurrystorage/current/start' class="govuk-link--no-visited-state"><strong>Round 2: version 1 (current)</a></strong><br>
           This version was not tested yet and <a href='https://eaflood.atlassian.net/browse/GRANTS-2076' target="new" class="govuk-link--no-visited-state">includes prototype tickets from Jira</a>.<br>
-            <span class="govuk-body govuk-!-font-size-14"># Last updated on 10 July 2023<br/>
+            <span class="govuk-body govuk-!-font-size-14"># Last updated on 12 July 2023<br/>
             </span></p>
 
 
