Apply for and System type updates

--- a/app/views/slurrystorage/current/applying-for.html
+++ b/app/views/slurrystorage/current/applying-for.html
@@ -40,7 +40,7 @@ Project type
                   text: "Building a new store, replacing or expanding an existing store",
                   checked: checked("applyingfor", "Store"),
                   hint: {
-                    text: ""
+                    text: "This includes adding a cover to the new or existing stores"
                     }
                   },
                 {
