--- a/app/views/slurrystorage/current/system-type.html
+++ b/app/views/slurrystorage/current/system-type.html
@@ -42,13 +42,13 @@ What is your current manure management system?
 
                 {
                   value: "Straw-bedded system with slurry production",
-                  text: "Farm-yard manure and slurry system",
+                  text: "Farmyard manure and slurry system",
                   checked: checked("systemtype", "Straw-bedded system with slurry production")
                 },
 
                 {
                   value: "straw-bedded system",
-                  text: "Farm-yard manure system that does not produce slurry",
+                  text: "Farmyard manure system that does not produce slurry",
                   checked: checked("systemtype", "straw-bedded system")
                 },
 
@@ -83,7 +83,7 @@ What is your current manure management system?
     Slurry is a liquid organic manure produced by livestock (other than poultry) while in a yard or building. It includes animal bedding and water that drains from areas where animals are kept.
   </div>
 </details>
-          
+
      </div>
    </div>
 
