--- a/app/views/slurrystorage/current/storage-capacity-increase-pig.html
+++ b/app/views/slurrystorage/current/storage-capacity-increase-pig.html
@@ -22,17 +22,18 @@ Current storage capacity
   <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
 
-  {# include logic for choices: DAIRY OR BEEF FARMER + 'Build a new store' and then 'Replace an existing store' #}
+  {# include logic for choices: PIG FARMER + 'Build a new store' and then 'Replace an existing store' #}
   {% if (data['projecttype'] == "Replace") %}
 
 
   <div class="govuk-form-group">
   <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
-    What estimated volume do you need <br>to have 6 months’ serviceable storage?
+    What estimated volume do you need <br>to have 8 months’ serviceable storage?
     </label>
   </h1>
   <div id="current-capacity-hint" class="govuk-hint">
-    Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+    Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">
+      Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 8 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
   </div>
   <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
@@ -42,21 +43,22 @@ Current storage capacity
 
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 6 months. Any capacity above 6 months is not covered by the grant.",
+          html: "This grant is to get your serviceable storage levels to 8 months. Any capacity above 8 months is not covered by the grant.",
           iconFallbackText: "Warning"
         }) }}
 
 
 
-        {# include logic for choices: DAIRY AND BEEF FARMER +'Build a new store' and then 'Add a new store' or 'Expand an existing store' #}
+        {# include logic for choices: PIG FARMER +'Build a new store' and then 'Add a new store' or 'Expand an existing store' #}
         {% else %}
         <div class="govuk-form-group">
         <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="current-capacity">
-          What estimated additional volume do you need to have 6 months’ serviceable storage?
+          What estimated additional volume do you need to have 8 months’ serviceable storage?
           </label>
         </h1>
         <div id="current-capacity-hint" class="govuk-hint">
-          Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 6 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
+          Use <a href="https://ahdb.org.uk/knowledge-library/slurry-wizard" class="govuk-link govuk-link--no-visited-state" rel="noreferrer noopener" target="_blank">
+            Slurry Wizard (opens in new tab)</a> to help you calculate the difference between your current serviceable storage and 8 months’ serviceable storage, based on current animal numbers<br><br>Enter volume in cubic metres
 
         </div>
         <div class="govuk-input__wrapper"><input class="govuk-input govuk-input--width-5" id="current-capacity2" name="current-capacity2" type="text" spellcheck="false" value="{{ data['current-capacity2'] }}">
@@ -65,7 +67,8 @@ Current storage capacity
       </div>
 
         {{ govukWarningText({
-          html: "This grant is to get your serviceable storage levels to 6 months. <br>For example, if you have 4 months’ serviceable storage, we will fund another 2 months. <br><br>Any capacity above 6 months is not covered by the grant.",
+          html: "This grant is to get your serviceable storage levels to 8 months. <br>For example, if you have 4 months’ serviceable storage, we will fund another 4 months. If you have 2 months’ serviceable storage and increase to 12 months, we will fund 6 months.
+<br><br>Any capacity above 8 months is not covered by the grant.",
           iconFallbackText: "Warning"
         }) }}
 {% endif %}
