--- a/app/views/slurrystorage/current/existing-fit-for-purpose.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose.html
@@ -39,7 +39,7 @@ Cover for existing stores (Cow and Dairy)
                   },
 
                   hint: {
-                    text: "Your existing store must be signed off by a structural engineer by full application. The cost of hiring an engineer will be included in grant funding."
+                    text: "Your existing store must be signed off by a structural engineer by full application."
                     },
 
                   items: [
