--- a/app/views/slurrystorage/current/intensive-farming-permit.html
+++ b/app/views/slurrystorage/current/intensive-farming-permit.html
@@ -80,7 +80,7 @@ Intensive farming permit
           <li>750 places for sows</li>
           </ul>
 
-          <p class="govuk-body">You may need to apply to change your permit if you increase your slurry storage.</p>
+          <p class="govuk-body">You may need to apply for a change to your permit if you increase your slurry storage.</p>
 
      </div>
    </div>
