--- a/app/views/slurrystorage/current/estimate.html
+++ b/app/views/slurrystorage/current/estimate.html
@@ -28,7 +28,7 @@
         <p>Add some information about the project (for example, type of store and capacity, type of cover and size, approximate size and quantity of other items you need) so we can estimate how much grant you could get.</p>
 
             <form class="form" action="standardised-grant-amounts" method="post">
-              <button class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">Continue</button>
+              <button class="govuk-button" data-module="govuk-button">Continue</button>
             </form>
 
       </div>
