--- a/app/views/slurrystorage/current/existing-size-storage.html
+++ b/app/views/slurrystorage/current/existing-size-storage.html
@@ -122,7 +122,7 @@ Existing size storage
                 </span>
               </summary>
               <div class="govuk-details__text">
-                A store is no longer fit for purpose if it has reached the end of its design life and may be susceptible to leaks or failure.
+                A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of to leaks or failure.
               </div>
             </details>
 
