--- a/app/views/slurrystorage/current/project-type.html
+++ b/app/views/slurrystorage/current/project-type.html
@@ -87,7 +87,7 @@ Project type
               </span>
             </summary>
             <div class="govuk-details__text">
-              A store is no longer fit for purpose if it has reached the end of its design life and may be susceptible to leaks or failure.
+              A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of to leaks or failure.
             </div>
           </details>
       </div>
