GRANTS-2268, GRANTS-2170, GRANTS-2282, GRANTS-2243

--- a/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose-fail.html
@@ -32,9 +32,9 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
     <h1 class="govuk-heading-l">You may be able to apply for a grant from this scheme</h1>
-      <p class="govuk-body">You will need to apply for a grant to build a new store, or expand or replace an existing store. </p>
+      <p class="govuk-body">You can continue to check your eligibility for grant funding to build a new store, or expand or replace an existing store.</p>
       {{ govukInsetText({
-        text: "To apply for a cover for your existing store, it must be signed off as fit for purpose by a structural engineer before full application."
+        text: "To apply for a cover, your existing store must be signed off as fit for purpose by a structural engineer by full application."
       }) }}
       <form class="form" action="estimate" method="post">
         <p>  <button class="govuk-button govuk-!-margin-right-1" data-module="govuk-button">Continue</button></p>
