--- a/app/views/slurrystorage/current/applying-for.html
+++ b/app/views/slurrystorage/current/applying-for.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-Project type
+Applying for
 {% endblock %}
 
 {% block beforeContent %}
@@ -75,7 +75,7 @@ Project type
         <h2 class="app-step-nav-related__heading">
           <span class="app-step-nav-related__pretitle">Eligibility</span>
           </h2>
-          <p class="govuk-body">A grant-funded store must have an impermeable cover.
+          <p class="govuk-body">A grant-funded store must have an impermeable cover unless the slurry is treated with acidification.
           </p>
 
           <details class="govuk-details" data-module="govuk-details">
@@ -85,7 +85,7 @@ Project type
               </span>
             </summary>
             <div class="govuk-details__text">
-              A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of to leaks or failure.
+              A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of leaks or failure.
             </div>
           </details>
       </div>
