--- a/app/views/slurrystorage/current/cover-existing-stores.html
+++ b/app/views/slurrystorage/current/cover-existing-stores.html
@@ -76,7 +76,7 @@ Cover for existing stores (Cow and Dairy)
                   </span>
                 </summary>
                 <div class="govuk-details__text">
-                  A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of to leaks or failure.
+                  A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of leaks or failure.
                 </div>
               </details>
 
