--- a/app/views/slurrystorage/current/existing-fit-for-purpose.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose.html
@@ -70,7 +70,7 @@ Cover for existing stores (Cow and Dairy)
           <h2 class="app-step-nav-related__heading">
             <span class="app-step-nav-related__pretitle">Eligibility</span>
             </h2>
-            <p>A store is no longer fit for purpose if it has reached the end of its design life and may be sat risk of leaks or failure.
+            <p>A store is no longer fit for purpose if it has reached the end of its design life and may be at risk of leaks or failure.
 
 
         </div>
