GRANTS-2288, GRANTS-2289, GRANTS-2290, GRANTS-2291

--- a/app/views/slurrystorage/current/cover-type.html
+++ b/app/views/slurrystorage/current/cover-type.html
@@ -26,7 +26,7 @@ What type of cover will you have?
           <fieldset class="govuk-fieldset" aria-describedby="covertype-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                What type of cover will you have?
+                What type of cover will you have on your grant-funded store?
               </h1>
             </legend>
             <div id="covertype-hint" class="govuk-hint">
