--- a/app/views/slurrystorage/current/existing-fit-for-purpose.html
+++ b/app/views/slurrystorage/current/existing-fit-for-purpose.html
@@ -32,7 +32,7 @@ Cover for existing stores (Cow and Dairy)
                   name: 'existingfitpurpose',
                   fieldset: {
                       legend: {
-                          text: 'Is your existing store fit for purpose?',
+                          text: 'Is the existing store you want to cover fit for purpose?',
                           isPageHeading: true,
                           classes: 'govuk-fieldset__legend--l'
                       }
