--- a/app/views/slurrystorage/current/standardised-grant-amounts.html
+++ b/app/views/slurrystorage/current/standardised-grant-amounts.html
@@ -21,7 +21,7 @@ Standardised costs
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-       <form id="mainForm" class="form" action="store-type" method="post">
+       <form id="mainForm" class="form" action="{{nextUrl}}" method="post">
 
          <div class="govuk-form-group">
         <h2 class="govuk-heading-l">Grant amounts for eligible items</h2>
